2004-06-15 Craig Franklin <craigfranklin@comcast.net>
  * Fixed relocations in idata sections.

2004-05-05 Craig Franklin <craigfranklin@comcast.net>
  * Added labels and gotos to gpal.

2004-05-02 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.12.1 Released.

2004-04-22 Craig Franklin <craigfranklin@comcast.net>
  * Added processor pub file generation.
  * Added default search path to gpal.

2004-04-17 Craig Franklin <craigfranklin@comcast.net>
  * Added support for #if directive and allow else in column 1.
  * Fixed malformed header files.  They were missing a NL before the EOF.
  * Added interrupt context save to gpal.

2004-03-13 Craig Franklin <craigfranklin@comcast.net>
  * Added gplink command line option to disable list file output.
  * Fixed gplink bug that caused an error to be generated if a source file
    wasn't found when generating a list file.
  * Fixed gplink 18xx initialized data sections so retlw isn't used.
  * Added support for stack sections in gplink.
  * Use section type to determine format for gpvo disassembly output.

2004-02-09 Craig Franklin <craigfranklin@comcast.net>
  * Fixed bug in gpdasm relative branches.

2004-02-07 Craig Franklin <craigfranklin@comcast.net>
  * Fixed uninitialized memory in escape character conversion.

2004-01-20 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.12.0 Released.
  * Fixed bug in gpdasm relative branches.
  * Force decimal interpretation of debug line number directive in gpasm.
  * Don't insert LIST or NOLIST symbols in gpasm COFF outputs if debug
    directives are used.
  * Fixed bug when concatenated symbols <string>_#v<expr> is used as a
    macro argument.
  * Fill missing 18xx config words in gpasm relocatable objects with 0xff
    instead of generating an error.

2004-01-16 Craig Franklin <craigfranklin@comcast.net>
  * Use install path for default when environmental variable isn't set.
  * Added GPUTILS_LIB_PATH environmental variable for gplink.